redlines implemented (phone)

--- a/app/src/main/res/layout/detail_list_item_forecast.xml
+++ b/app/src/main/res/layout/detail_list_item_forecast.xml
@@ -3,9 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:paddingLeft="60dp"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
-    android:background="@drawable/touch_selector"
+    android:background="@color/sunshine_blue"
     >
 
 
@@ -14,37 +15,41 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="1"
-        android:paddingLeft="16dp"
-        android:gravity="center_horizontal"
+        android:layout_weight="0"
+
+        android:gravity="start"
         >
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="start"
             android:text="TOMORROW"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@color/white"
             android:id="@+id/list_item_date_textview"
             />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:textSize="30dp"
+            android:gravity="start"
+            android:textSize="72sp"
             android:text="21°"
+            android:textColor="@color/white"
+            android:fontFamily="sans-serif-light"
             android:id="@+id/list_item_high_textview"
             />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:gravity="center"
-            android:textSize="20dp"
+            android:gravity="start"
+            android:textSize="36sp"
+            android:fontFamily="sans-serif-light"
             android:text="17°"
+            android:textColor="@color/white"
             android:id="@+id/list_item_low_textview"
             />
 
@@ -59,9 +64,8 @@
         >
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:gravity="center"
             android:id="@+id/list_item_icon"
             />
@@ -69,9 +73,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:textAppearance="?android:textAppearanceLarge"
             android:gravity="center"
             android:text="CLEAR"
+            android:textColor="@color/white"
             android:id="@+id/list_item_forecast_textview"
             />
 
