--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingLeft="16dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -19,77 +20,83 @@
           android:orientation="vertical"
           >
           <TextView
-          android:layout_width="match_parent"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
           android:gravity="start"
+          android:textSize="24sp"
+          android:fontFamily="sans-serif-condensed"
           android:id="@+id/detail_item_monthday_textview"
           />
           <TextView
-              android:layout_width="match_parent"
+              android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_weight="1"
               android:gravity="start"
               android:id="@+id/detail_item_date_textview"
+              android:textSize="16sp"
+              android:fontFamily="sans-serif-condensed"
+              android:textColor="@color/light_text"
               />
 
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="horizontal">
+              android:orientation="horizontal"
+              android:layout_marginTop="16dp"
+
+              >
               <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="wrap_content"
-                  android:layout_height="match_parent"
+                  android:layout_height="wrap_content"
                   android:orientation="vertical"
-                  android:layout_weight="1"
-
-                  android:gravity="center_horizontal"
+                  android:gravity="left"
                   >
 
                   <TextView
-                      android:layout_width="match_parent"
+                      android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_weight="2"
-                      android:gravity="start"
+                      android:gravity="center"
                       android:paddingTop="20dp"
                       android:paddingBottom="20dp"
-                      android:textSize="30dp"
+                      android:textSize="96sp"
+                      android:fontFamily="sans-serif-light"
                       android:id="@+id/detail_item_high_textview"
                       />
 
                   <TextView
-                      android:layout_width="match_parent"
+                      android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_weight="1.5"
-                      android:gravity="start"
+                      android:gravity="center"
                       android:paddingTop="20dp"
                       android:paddingBottom="20dp"
-                      android:textSize="20dp"
+                      android:textSize="48sp"
+                      android:textColor="@color/light_text"
+                      android:fontFamily="sans-serif-light"
                       android:id="@+id/detail_item_low_textview"
                       />
 
               </LinearLayout>
               <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="wrap_content"
-                  android:layout_height="match_parent"
+                  android:layout_height="wrap_content"
                   android:orientation="vertical"
-                  android:layout_weight="1"
                   android:gravity="center_horizontal"
+                  android:layout_gravity="center"
                   >
 
                   <ImageView
-                      android:layout_width="match_parent"
+                      android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_weight="1"
                       android:gravity="center"
                       android:id="@+id/detail_item_icon"
                       />
 
                   <TextView
-                      android:layout_width="match_parent"
+                      android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-
+                      android:textAppearance="?android:textAppearanceLarge"
+                      android:textColor="@color/light_text"
                       android:gravity="center"
+                      android:fontFamily="sans-serif-condensed"
                       android:id="@+id/detail_item_forecast_textview"
                       />
 
@@ -98,22 +105,28 @@
           <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:paddingTop="30dp"
+          android:paddingTop="4dp"
           android:gravity="left"
+          android:textAppearance="?android:textAppearanceLarge"
+              android:fontFamily="sans-serif-light"
           android:id="@+id/detail_item_forecast_humidity" />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:paddingTop="30dp"
+              android:paddingTop="4dp"
+              android:textAppearance="?android:textAppearanceLarge"
+              android:fontFamily="sans-serif-light"
               android:gravity="left"
-              android:id="@+id/detail_item_forecast_wind"
+              android:id="@+id/detail_item_forecast_pressure"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:paddingTop="30dp"
+              android:paddingTop="4dp"
               android:gravity="left"
-              android:id="@+id/detail_item_forecast_pressure"
+              android:textAppearance="?android:textAppearanceLarge"
+              android:fontFamily="sans-serif-light"
+              android:id="@+id/detail_item_forecast_wind"
               />
           </LinearLayout>
 
