--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -22,10 +22,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_weight="25">
+                android:minWidth="56dp"
+                >
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:minWidth="120dp"
+                    android:textSize="24sp"
+                    android:fontFamily="sans-serif-condensed"
                     android:gravity="top"
                     android:id="@+id/detail_item_monthday_textview"
                     />
@@ -34,70 +38,82 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top"
+                    android:textSize="20sp"
+                    android:textColor="@color/light_text"
+                    android:fontFamily="sans-serif-condensed"
                     android:id="@+id/detail_item_date_textview"
                     />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_weight="50"
+                android:layout_marginLeft="16dp"
                 >
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:gravity="top">
                     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_weight="50"
 
-                        android:gravity="center_horizontal"
+
+                        android:gravity="top"
                         >
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="start"
-                            android:paddingTop="5dp"
-                            android:paddingBottom="5dp"
-                            android:textSize="30dp"
+                            android:textSize="96sp"
+                            android:fontFamily="sans-serif-light"
                             android:id="@+id/detail_item_high_textview"
+                            android:gravity="top"
                             />
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1.5"
-                            android:gravity="start"
-                            android:paddingTop="5dp"
-                            android:paddingBottom="5dp"
-                            android:textSize="20dp"
+                            android:textSize="48sp"
+                            android:textColor="@color/light_text"
+                            android:fontFamily="sans-serif-light"
                             android:id="@+id/detail_item_low_textview"
                             />
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingTop="5dp"
+                            android:paddingTop="16dp"
+                            android:textAppearance="?android:textAppearanceLarge"
+                            android:fontFamily="sans-serif-condensed"
                             android:gravity="left"
                             android:id="@+id/detail_item_forecast_humidity" />
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingTop="5dp"
+                            android:paddingTop="4dp"
                             android:gravity="left"
+                            android:textAppearance="?android:textAppearanceLarge"
+                            android:fontFamily="sans-serif-condensed"
                             android:id="@+id/detail_item_forecast_wind"
                             />
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingTop="5dp"
+                            android:paddingTop="4dp"
+                            android:textAppearance="?android:textAppearanceLarge"
+                            android:fontFamily="sans-serif-condensed"
                             android:gravity="left"
                             android:id="@+id/detail_item_forecast_pressure"
+                            />
+                        <com.example.android.sunshine.app.MyView
+                            android:layout_marginTop="10dp"
+                            android:layout_height="100dp"
+                            android:layout_width="100dp"
+                            android:id="@+id/detail_item_my_view"
                             />
                     </LinearLayout>
 
@@ -106,16 +122,14 @@
             </LinearLayout>
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_weight="25"
                 android:gravity="center_horizontal"
                 >
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:gravity="center"
                     android:id="@+id/detail_item_icon"
                     />
@@ -123,7 +137,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:textAppearance="?android:textAppearanceLarge"
+                    android:fontFamily="sans-serif-condensed"
+                    android:textColor="@color/light_text"
                     android:gravity="center"
                     android:id="@+id/detail_item_forecast_textview"
                     />
