--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -11,12 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
       <LinearLayout
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
+          android:layout_height="wrap_content"
           android:orientation="vertical"
           >
 
@@ -49,7 +48,7 @@
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
-                  android:gravity="left"
+                  android:gravity="start"
                   >
 
                   <TextView
@@ -104,27 +103,28 @@
               </LinearLayout>
           </LinearLayout>
           <TextView
-          android:layout_width="match_parent"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingTop="4dp"
-          android:gravity="left"
+          android:gravity="start"
           android:textAppearance="?android:textAppearanceLarge"
               android:fontFamily="sans-serif-light"
           android:id="@+id/detail_item_forecast_humidity" />
           <TextView
-              android:layout_width="match_parent"
+              android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingTop="4dp"
               android:textAppearance="?android:textAppearanceLarge"
               android:fontFamily="sans-serif-light"
-              android:gravity="left"
+              android:gravity="start"
+              android:layout_gravity="start"
               android:id="@+id/detail_item_forecast_pressure"
               />
           <TextView
-              android:layout_width="match_parent"
+              android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingTop="4dp"
-              android:gravity="left"
+              android:gravity="start"
               android:textAppearance="?android:textAppearanceLarge"
               android:fontFamily="sans-serif-light"
               android:id="@+id/detail_item_forecast_wind"
