--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/tools">
 
     <string-array name="pref_units_options">
         <item>@string/pref_units_label_metric</item>
@@ -9,5 +9,14 @@
     <string-array name="pref_units_values">
         <item>@string/pref_units_metric</item>
         <item>@string/pref_units_imperial</item>
+    </string-array>
+
+    <string-array name="pref_icons_options">
+        <item>@string/pref_icons_sunshine_name</item>
+        <item>@string/pref_icons_modern_name</item>
+    </string-array>
+    <string-array name="pref_icons_values">
+        <item>@string/pref_icons_sunshine</item>
+        <item>@string/pref_icons_modern</item>
     </string-array>
 </resources>
