--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -24,7 +24,13 @@
         android:title="@string/pref_enable_notifications_label"
         android:key="@string/pref_enable_notifications_key"
         android:summaryOff="@string/pref_enable_notifications_false"
-
         android:summaryOn="@string/pref_enable_notifications_true"
         android:defaultValue="@string/pref_enable_notifications_default" />
+    <ListPreference
+        android:title="Choose icons"
+        android:key="@string/pref_icons_key"
+        android:defaultValue="@string/pref_icons_modern"
+        android:entryValues="@array/pref_icons_values"
+        android:entries="@array/pref_icons_options"
+        />
 </PreferenceScreen>
