--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,9 @@
 
     <color name="grey">#cccccc</color>
     <color name="light_text">#646464</color>
-    <color name="sunshine_light_blue">#ff64c2f4</color>
-    <color name="sunshine_blue">#ff1ca8f4</color>
-    <color name="sunshine_dark_blue">#0288D1</color>
     <color name="white">#FFFFFF</color>
+    <color name="primary_light">#b3e5fc</color>
+    <color name="primary">#03a9f4</color>
+    <color name="primary_dark">#0288d1</color>
+    <color name="accent">#ffd740</color>
 </resources>
