--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,115 +10,109 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@android:color/white" />
 
-    <include layout="@layout/detail_today_grid"
+    <include
+        layout="@layout/detail_today_grid"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"/>
+        android:layout_weight="3" />
 
-    <LinearLayout
-        android:id="@+id/detail_additional_pane"
+
+    <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
         android:background="@color/detail_accent_pane_background"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
-        android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
-        android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
-        android:paddingRight="@dimen/forecast_detail_horizontal_padding"
-        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
-        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material">
+        app:columnCount="2">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/detail_humidity_label_textview"
+            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+            android:fontFamily="sans-serif"
+            android:gravity="center_horizontal"
+            android:text="@string/humidity"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@color/detail_accent_label"
+            app:layout_columnSpan="1"
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_horizontal"
+            tools:text="Humidity" />
 
-            <TextView
-                android:id="@+id/detail_humidity_label_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
-                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
-                android:gravity="center_vertical"
-                android:text="@string/humidity"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textColor="@color/detail_accent_label" />
+        <TextView
+            android:id="@+id/detail_humidity_textview"
+            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            android:text="@string/humidity"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="@android:color/white"
+            app:layout_columnSpan="1"
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_horizontal"
+            tools:text="38%" />
 
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
-                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
-                android:id="@+id/detail_humidity_textview"
-                android:gravity="center_vertical"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textColor="@android:color/white"
-                tools:text="38%" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/detail_pressure_label_textview"
+            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+            android:fontFamily="sans-serif"
+            android:gravity="center_horizontal"
+            android:text="@string/pressure"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@color/detail_accent_label"
+            app:layout_columnSpan="1"
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_horizontal"
+            tools:text="Pressure" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/detail_pressure_textview"
+            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="@android:color/white"
+            app:layout_columnSpan="1"
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_horizontal"
+            tools:text="995 hPa" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
-                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
-                android:id="@+id/detail_pressure_label_textview"
-                android:fontFamily="sans-serif"
-                android:gravity="center_vertical"
-                android:text="@string/pressure"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textColor="@color/detail_accent_label" />
+        <TextView
+            android:id="@+id/detail_wind_label_textview"
+            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+            android:fontFamily="sans-serif"
+            android:gravity="center_horizontal"
+            android:text="@string/wind"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@color/detail_accent_label"
+            app:layout_columnSpan="1"
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_horizontal"
+            tools:text="Wind" />
 
+        <TextView
+            android:id="@+id/detail_wind_textview"
+            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="@android:color/white"
+            app:layout_columnSpan="1"
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_horizontal"
+            tools:text="4km/h NW" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/detail_pressure_textview"
-                android:gravity="center_vertical"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textColor="@android:color/white"
-                tools:text="995 hPa" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
-                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
-                android:id="@+id/detail_wind_label_textview"
-                android:fontFamily="sans-serif"
-                android:gravity="center_vertical"
-                android:text="@string/wind"
-                android:textColor="@color/detail_accent_label"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/detail_wind_textview"
-                android:gravity="center_vertical"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textColor="@android:color/white"
-                tools:text="4km/h NW" />
-        </LinearLayout>
-    </LinearLayout>
+    </android.support.v7.widget.GridLayout>
 
     <ImageSwitcher
+        android:id="@+id/imageSwitcher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageSwitcher"
         android:layout_gravity="right" />
 </LinearLayout>
